@@ -1838,17 +1838,6 @@ gboolean asnet_is_available() {
 }
 #endif
 
-static void child_watch_cb(GPid pid, gint status, gpointer user_data) {
-	//#if GLIB_CHECK_VERSION(2,70,0)
-	//siril_debug_print("Child %" G_PID_FORMAT " exited %s\n", pid,
-	//		g_spawn_check_wait_status (status, NULL) ? "normally" : "abnormally");
-	//#else
-	//siril_debug_print("Child %" G_PID_FORMAT " exited %s\n", pid,
-	//		g_spawn_check_exit_status (status, NULL) ? "normally" : "abnormally");
-	//#endif
-	g_spawn_close_pid(pid);
-}
-
 static int local_asnet_platesolve(psf_star **stars, int nb_stars, struct astrometry_data *args, solve_results *solution) {
 #ifdef _WIN32
 	gchar *asnet_shell = siril_get_asnet_bash();
@@ -1926,13 +1915,9 @@ static int local_asnet_platesolve(psf_star **stars, int nb_stars, struct astrome
 	gint child_stdout, child_stderr;
 	GPid child_pid;
 	g_autoptr(GError) error = NULL;
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-	AllocConsole(); // opening a console to get asnet stdout when in stable (no console build)
-	ShowWindow(GetConsoleWindow(), SW_MINIMIZE); // and hiding it
-#endif
 
 	g_spawn_async_with_pipes(NULL, sfargs, NULL,
-			G_SPAWN_DO_NOT_REAP_CHILD | G_SPAWN_LEAVE_DESCRIPTORS_OPEN | G_SPAWN_SEARCH_PATH,
+			G_SPAWN_LEAVE_DESCRIPTORS_OPEN | G_SPAWN_SEARCH_PATH,
 			NULL, NULL, &child_pid, NULL, &child_stdout,
 			&child_stderr, &error);
 	if (error != NULL) {
@@ -1943,17 +1928,11 @@ static int local_asnet_platesolve(psf_star **stars, int nb_stars, struct astrome
 		g_free(table_filename);
 #ifdef _WIN32
 		g_free(asnet_shell);
-#ifndef SIRIL_UNSTABLE
-		FreeConsole(); // and closing it
-#endif
 #else
 		g_free(asnet_path);
 #endif
 		return 1;
 	}
-
-	// Add a child watch function which will be called when the child process exits.
-	g_child_watch_add(child_pid, child_watch_cb, NULL);
 
 	GInputStream *stream = NULL;
 #ifdef _WIN32
@@ -1990,9 +1969,6 @@ static int local_asnet_platesolve(psf_star **stars, int nb_stars, struct astrome
 	g_free(table_filename);
 #ifdef _WIN32
 	g_free(asnet_shell);
-#ifndef SIRIL_UNSTABLE
-	FreeConsole(); // and closing it
-#endif
 #else
 	g_free(asnet_path);
 #endif
