@@ -72,9 +72,6 @@
 fits *current_fit = NULL;
 gboolean verbose = TRUE;
 
-static void child_watch_cb(GPid pid, gint status, gpointer user_data) {
-	g_spawn_close_pid(pid);
-}
 
 static int exec_prog_starnet(char **argv, starnet_version version) {
 	gint child_stdout;
@@ -82,27 +79,17 @@ static int exec_prog_starnet(char **argv, starnet_version version) {
 	g_autoptr(GError) error = NULL;
 	int retval = -1;
 
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-	AllocConsole(); // opening a console to get starnet stdout when in stable (no console build)
-	ShowWindow(GetConsoleWindow(), SW_MINIMIZE); // and hiding it
-#endif
-
 	// g_spawn handles wchar so not need to convert
 	g_spawn_async_with_pipes(NULL, argv, NULL,
-			G_SPAWN_DO_NOT_REAP_CHILD | G_SPAWN_SEARCH_PATH |
+			G_SPAWN_SEARCH_PATH |
 			G_SPAWN_LEAVE_DESCRIPTORS_OPEN | G_SPAWN_STDERR_TO_DEV_NULL,
 			NULL, NULL, &child_pid, NULL, &child_stdout,
 			NULL, &error);
 
 	if (error != NULL) {
 		siril_log_color_message(_("Spawning starnet failed: %s\n"), "red", error->message);
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-		FreeConsole(); // and closing it
-#endif
 		return retval;
 	}
-	// Add a child watch function which will be called when the child process exits.
-	g_child_watch_add(child_pid, child_watch_cb, NULL);
 
 	GInputStream *stream = NULL;
 #ifdef _WIN32
@@ -157,9 +144,6 @@ static int exec_prog_starnet(char **argv, starnet_version version) {
 #endif
 	g_object_unref(data_input);
 	g_object_unref(stream);
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-	FreeConsole(); // and closing it
-#endif
 	return retval;
 }
 
@@ -210,27 +194,18 @@ starnet_version starnet_executablecheck(gchar* executable) {
 	test_argv[nb++] = executable;
 	gchar *versionarg = g_strdup("--version");
 	test_argv[nb++] = versionarg;
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-	AllocConsole(); // opening a console to get starnet stdout when in stable (no console build)
-	ShowWindow(GetConsoleWindow(), SW_MINIMIZE); // and hiding it
-#endif
 	// g_spawn handles wchar so not need to convert
 	g_spawn_async_with_pipes(NULL, test_argv, NULL,
-			G_SPAWN_DO_NOT_REAP_CHILD | G_SPAWN_SEARCH_PATH |
+			G_SPAWN_SEARCH_PATH |
 			G_SPAWN_LEAVE_DESCRIPTORS_OPEN | G_SPAWN_STDERR_TO_DEV_NULL,
 			NULL, NULL, &child_pid, NULL, &child_stdout,
 			NULL, &error);
 
 	if (error != NULL) {
 		siril_log_color_message(_("Spawning starnet failed during version check: %s\n"), "red", error->message);
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-		FreeConsole(); // and closing it
-#endif
 		g_free(versionarg);
 		return NIL;
 	}
-	// Add a child watch function which will be called when the child process exits.
-	g_child_watch_add(child_pid, child_watch_cb, NULL);
 
 	GInputStream *stream = NULL;
 #ifdef _WIN32
@@ -266,9 +241,6 @@ starnet_version starnet_executablecheck(gchar* executable) {
 	g_object_unref(data_input);
 	g_object_unref(stream);
 	g_free(versionarg);
-#if defined(_WIN32) && !defined(SIRIL_UNSTABLE)
-	FreeConsole(); // and closing it
-#endif
 
 	retval2 = g_chdir(currentdir);
 	if (retval2) {
