@@ -809,18 +809,14 @@ int light_curve(pldata *plot, sequence *seq, gchar *filename) {
 	/*  data are computed, now plot the graph. */
 
 	if (use_gnuplot) {
-		/* First, close the graph if already exists */
-		if (gplot != NULL) {
-			gnuplot_close(gplot);
-		}
-
-		if ((gplot = gnuplot_init())) {
+		if ((gplot = gnuplot_init(TRUE))) {
 			/* Plotting light curve */
 			gnuplot_set_title(gplot, _("Light Curve"));
 			gnuplot_set_xlabel(gplot, xlabel);
 			gnuplot_reverse_yaxis(gplot);
 			gnuplot_setstyle(gplot, "errorbars");
 			gnuplot_plot_xyyerr(gplot, x, vmag, err, nb_valid_images, "", 0);
+			g_idle_add(gnuplot_close_idle, gplot); // called in idle to let the plotting finish before closing gnuplot
 		}
 		else siril_log_message(_("Communicating with gnuplot failed, still creating the data file\n"));
 	}
